--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,18 @@ button {
 }
 
 .tasks-list {
-    min-height: 10px;
     padding: 0;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+}
+
+.sections {
+    height: 100%;
+}
+
+.sections.dragover{
+    border: 2px solid lightblue;
 }
 
 .dragover {
