feat: add styling to the project

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,22 @@
+body {
+    background: linear-gradient(135deg, #6e7dff, #b5d0ff);
+    font-family: 'Montserrat', 'Trebuchet MS', sans-serif;
+}
+
 .header {
     text-align: center;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.project-name {
+    font-size: 1.2rem;
+    color: white;
+    font-weight: bold;
+    padding: 1rem;
+    width: 100%;
+    background-color: #5A6BDF;
+    margin-bottom: 0.5rem;
 }
 
 button {
@@ -13,7 +30,7 @@ button {
 }
 
 .lists > div {
-    background-color: lightgray;
+    background-color: whitesmoke;
     padding: 0 1rem;
     margin-right: 1rem;
     border-radius: 10px;
@@ -21,21 +38,59 @@ button {
 }
 
 .lists .toggle-input-btn {
+    width: 80%;
+    text-align: left;
     display: "block";
-    background-color: lightgray;
+    background-color: whitesmoke;
     padding: 0.5rem 2rem 0.5rem 0.3rem;
     border: none;
-    margin-bottom: 1rem;
+    margin: 0.5rem 0 1rem 0;
+    font-size: 0.9rem;
 }
 
 .lists .toggle-input-btn:hover {
-    background-color: gray;
+    background-color: lightgray;
     border-radius: 5px;
 }
 
 .input-section {
+    margin: 0.5rem 0;
     display: none;
     flex-direction: column;
+}
+
+.add-task-btn {
+    padding: 0.5rem 0.8rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #1F51FF;
+    color: white;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.add-task-btn:hover {
+    background-color: #0047AB;
+}
+
+.close-btn {
+    border: none;
+    height: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+    background-color: inherit;
+    font-size: 1rem;
+}
+
+.close-btn:hover {
+    background-color: lightgray;
+}
+
+.card-input {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 0.5rem;
 }
 
 .tasks-list {
@@ -47,6 +102,10 @@ button {
 
 .sections {
     height: 100%;
+}
+
+.sections p {
+    font-weight: bold;
 }
 
 .sections.dragover{
@@ -64,6 +123,7 @@ button {
 }
 
 .draggable {
+    border: 0.2px solid black;
     cursor: move;
 }
 
