--- a/v2 - Firebase/src/styles/styles.css
+++ b/v2 - Firebase/src/styles/styles.css
@@ -9,7 +9,10 @@ body {
   font-size: 1.5rem;
 }
 
-.project-name {
+.project-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-size: 1.2rem;
   color: white;
   font-weight: bold;
@@ -17,6 +20,20 @@ body {
   width: 100%;
   background-color: #5a6bdf;
   margin-bottom: 0.5rem;
+}
+
+#logout-btn {
+  margin-right: 5%;
+  padding: 1rem 1.5rem;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-weight: bold;
+  background-color: #1f51ff;
+}
+
+#logout-btn:hover{
+  background-color: #0047ab;
 }
 
 button {
