--- a/v3 - NextJS/src/app/globals.css
+++ b/v3 - NextJS/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,9 +19,9 @@ body {
 }
 
 body {
+  background: linear-gradient(135deg, #6e7dff, #b5d0ff);
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
